# UniversalConverter-FTL

./: CMakeLists.txt  LICENSE  Makefile  README.md
inc/: BigInt.hpp  Interface.hpp
source/: BigFraction.cpp  BigFraction.hpp  BigInt.cpp  BigInt.hpp  Interface.cpp  Interface.hpp  a.out  main.cpp  test.cpp
src/: BigInt.cpp  Interface.cpp  main.cpp
src/app/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.hpp
src/numericlogic/: CMakeLists.txt  bigfraction.cpp  bigfraction.hpp  bigint.cpp
